# spectator_ros

./: CMakeLists.txt  package.xml
config/: configuration.yaml
include/spectator/: cmd_handler.h  joint.h  snap_around.h  spectator.h
launch/: spectator_controller.launch
msg/: info.msg
src/: .spectator.cpp.swp  .spectator_node.cpp.swp  cmd_handler.cpp  joint.cpp  snap_around.cpp  spectator.cpp  spectator_key.cpp  spectator_node.cpp
srv/: get_float_value.srv  get_uint_value.srv  set_target.srv  set_val.srv
